<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <foundation.icon.iconex.widgets.CustomActionBar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:start_icon="back"
        app:text="@string/titleBackup"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:fontFamily="@font/noto_sans_medium"
                android:textSize="16dp"
                android:textColor="@color/dark4D"
                android:gravity="center_horizontal"
                android:text="@string/headerBackup"/>

            <Button
                android:id="@+id/btn_back_up"
                style="@style/TextButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_btn_outline_01"
                android:fontFamily="@font/noto_sans_light"
                android:text="@string/walletDownload"
                android:textColor="@color/txt_btn_outline_01"
                android:textSize="10dp" />

            <TextView
                style="@style/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_outline_box_cyan"
                android:fontFamily="@font/noto_sans_regular"
                android:padding="20dp"
                android:text="@string/downDetailed1"
                android:textColor="@color/primary00" />

            <TextView
                style="@style/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/downDetailed2"
                android:textColor="@color/primary00"/>

            <foundation.icon.iconex.widgets.TTextInputLayout
                android:id="@+id/input_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:hint="@string/privateKey"
                app:inputType="readOnly" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_copy"
                    style="@style/TextButton"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_outline_01"
                    android:fontFamily="@font/noto_sans_light"
                    android:text="@string/copyPrivateKey"
                    android:textColor="@color/txt_btn_outline_01"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/btn_view_info"
                    style="@style/TextButton"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_outline_01"
                    android:fontFamily="@font/noto_sans_light"
                    android:text="@string/viewWalletInfo"
                    android:textColor="@color/txt_btn_outline_01"
                    android:textSize="10dp" />
            </LinearLayout>

            <TextView
                style="@style/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_outline_box_cyan"
                android:fontFamily="@font/noto_sans_regular"
                android:padding="20dp"
                android:text="@string/priDetailed2"
                android:textColor="@color/primary00" />

            <TextView
                style="@style/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/priDetailed1"
                android:textColor="@color/primary00"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>