<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <foundation.icon.iconex.widgets.CustomActionBar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:start_icon="back"
        app:text="@string/titleChangeWalletPwd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/layout_change"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:fontFamily="@font/noto_sans_medium"
            android:textSize="14dp"
            android:textColor="@color/dark4D"
            android:gravity="center_horizontal"

            android:text="@string/changeWalletPwdGuide"/>

        <foundation.icon.iconex.widgets.TTextInputLayout
            android:id="@+id/edit_old_pwd"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="password"
            app:hint="@string/hintOldWalletPwd"/>

        <foundation.icon.iconex.widgets.TTextInputLayout
            android:id="@+id/edit_pwd"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="password"
            app:hint="@string/hintNewWalletPwd"/>

        <foundation.icon.iconex.widgets.TTextInputLayout
            android:id="@+id/edit_check"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="password"
            app:hint="@string/hintNewWalletPwdConfirm"/>

        <TextView
            style="@style/TextView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_outline_box_cyan"
            android:fontFamily="@font/noto_sans_regular"
            android:padding="20dp"
            android:text="@string/changeWalletPwdHeader"
            android:textColor="@color/primary00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_light"
                android:textSize="10dp"
                android:text="· "
                android:textColor="@color/primary00"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="10dp"
                android:fontFamily="@font/noto_sans_light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/changeWalletPwdDetailed"
                android:textColor="@color/primary00"/>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_change"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/darkFC">

        <Button
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="10dp"
            android:background="@drawable/bg_button_rounded12_primaryb6"
            android:stateListAnimator="@null"

            android:textSize="14dp"
            android:fontFamily="@font/noto_sans_regular"
            android:textAllCaps="false"
            android:textColor="@color/text_default_primary_disable_darkb3"
            android:enabled="false"

            android:text="@string/change"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>