<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:background="@android:color/transparent"
            android:layout_marginLeft="14dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:fontFamily="@font/noto_sans_medium"
            android:textColor="@color/dark4D"
            android:textSize="16dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:text="@string/searchOption"/>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:fontFamily="@font/noto_sans_light"
            android:textSize="12dp"
            android:textColor="@color/dark80"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:text="@string/confirm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:gravity="center"

        android:text="@string/txType"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/btn_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/text_selector_primary"
            android:background="@drawable/bg_button_left"
            android:textSize="10dp"
            android:textAllCaps="false"


            android:text="@string/all"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/text_selector_primary"
            android:background="@drawable/bg_button_center"
            android:textSize="10dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:textAllCaps="false"

            android:text="@string/transfer"/>

        <Button
            android:id="@+id/btn_deposit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/text_selector_primary"
            android:layout_weight="1"
            android:background="@drawable/bg_button_right"
            android:textSize="10dp"
            android:textAllCaps="false"

            android:text="@string/deposit"/>
    </LinearLayout>
</LinearLayout>